# photodedupe

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE-MIT  README.md  _config.yml  clear  index.md  paths
_layouts/: default.html
debian/: changelog  control  copyright  debcargo.toml  photodedupe.manpages  rules
docs/: .$photodedupe_readme_scaling_diagram.drawio.bkp  man_page_source.md  photodedupe.1
docs/debian_specific/: changelog
docs/man_page/: man_page_source.md  photodedupe.1
docs/readme_images/: photodedupe_readme_scaling_diagram.drawio
scripts/: build-debian-installer-package.sh  control  version_number_checker.py
src/: image_error.rs  imagehash.rs  main.rs
unit_test_images/: Image-Credits-Licenses.md  book5_duplicate_1.tif  cat3_duplicate_1.tif  face5_duplicate_1.tif  parrot5_duplicate_1.tif
