[package]
name = "photodedupe"
version = "1.0.0"
authors = ["LJ Bubb"]
edition = "2021"
license = "MIT"
description = "A utility for identifying duplicate photos"

[dependencies]
image = "0.24.8"
thiserror = "1.0.57"
clap = { version = "4.5.0", features = ["derive"] }
walkdir = "2.4.0"
threadpool = "1.8.1"
indicatif = "0.17.8"
glob = "0.3.1"
