[package]
name = "photodedupe"
version = "1.0.2"
authors = ["LJ Bubb", "Mikhail Kazantsev"]
edition = "2021"
license = "MIT"
description = "A utility for identifying duplicate photos"
homepage = "https://github.com/InexplicableMagic/photodedupe"
repository = "https://github.com/InexplicableMagic/photodedupe"
readme = "README.md"
keywords = ["images", "duplicate"]
exclude = [
"debian",
"unit_test_images",
"docs"
]
[dependencies]
image = "0.25.5"
thiserror = "2.0.11"
clap = { version = "4.5.0", features = ["derive"] }
walkdir = "2.4.0"
threadpool = "1.8.1"
indicatif = "0.17.8"
glob = "0.3.2"
zune-jpeg ="0.5.5"
[profile.release]
strip = "debuginfo"

