[package]
name = "photodedupe"
version = "1.0.4"
authors = ["LJ Bubb <photodedupe@leoncode.co.uk>", "Mikhail Kazantsev <kazan417@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A utility for identifying duplicate photos"
homepage = "https://github.com/InexplicableMagic/photodedupe"
repository = "https://github.com/InexplicableMagic/photodedupe"
readme = "README.md"
categories = ["command-line-utilities", "multimedia::images"]
keywords = ["images", "duplicate"]
exclude = ["debian","unit_test_images"]
[dependencies]
image = "=0.25.5"
thiserror = "2.0.11"
clap = { version = "4.5.0", features = ["derive"] }
walkdir = "2.4.0"
threadpool = "1.8.1"
indicatif = "0.17.8"
glob = "0.3.2"
[profile.release]
debug = "line-tables-only"
[package.metadata.deb]
maintainer = "Mikhail Kazantsev <kazan417@gmail.com>"
section = "utility"
priority = "optional"
separate-debug-symbols = "true"
copyright = ["2021-2026, LJ Bubb <photodedupe@leoncode.co.uk>", "2025-2025, Mikhail Kazantsev <kazan417@gmail.com>"]
license-file = "LICENSE-MIT"
